# mdstream

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
docs/: ADAPTERS.md  ADR_0001_STREAMING_CONCURRENCY.md  ARCHITECTURE.md  COMPATIBILITY.md  EXTENSIONS.md  MVP.md  ROADMAP.md  STATE.md  USAGE.md
examples/: footnotes_reset.rs  minimal.rs  pulldown_incremental.rs  stateful_transformer.rs  tui_like.rs
mdstream/: Cargo.toml
mdstream/examples/: borrowed_updates.rs
mdstream/src/: boundary.rs  stream.rs  transform.rs  types.rs
mdstream/src/adapters/: pulldown.rs
mdstream/src/stream/: compaction.rs
mdstream/tests/: code_fence_closure.rs  update_ref.rs
src/: analyze.rs  boundary.rs  lib.rs  options.rs  state.rs  stream.rs  syntax.rs  transform.rs  types.rs
src/adapters/: pulldown.rs
src/pending/: mod.rs  terminator.rs
tests/: analyzed_stream_tagged_blocks.rs  analyzed_stream_tool_call_json.rs  boundary_plugin.rs  boundary_tag_plugin.rs  chunking_invariance_suite.rs  code_fence_metadata.rs  code_fence_nested_content.rs  stream_block_splitting.rs  stream_incremark_inspired.rs  stream_incremark_regressions.rs  stream_list_blockquote_edges.rs  stream_streamdown_basic_parsing.rs  stream_streamdown_code_blocks.rs  stream_streamdown_html_blocks.rs  stream_streamdown_mixed_content.rs  stream_streamdown_simulation.rs  stream_streamdown_streaming_simulation_parity.rs  stream_streamdown_tables.rs  terminator_streamdown_cases.rs  thread_safety.rs
tests/support/: mod.rs
