[package]
name = "mdstream"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = { version = "0.13", optional = true }
jsonrepair = { version = "0.1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[features]
default = []
pulldown = ["dep:pulldown-cmark"]
jsonrepair = ["dep:jsonrepair"]
serde-json = ["dep:serde", "dep:serde_json"]
